# stereokit-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
examples/: basic.rs
ffi-helpers/: Cargo.toml
ffi-helpers/macros/: Cargo.toml
ffi-helpers/macros/src/: error.rs  lib.rs  util.rs
ffi-helpers/src/: impl_transmutable.rs  lib.rs
generator/: Cargo.toml  checklist.blank.md
generator/src/: main.rs
stereokit/: Cargo.toml
stereokit/examples/: basic.rs
stereokit/examples/demos/: app.rs  main.rs
stereokit/src/: lib.rs  lifecycle.rs  settings.rs  state.rs  transmute.rs
stereokit/src/assets/: material.rs  mesh.rs  mod.rs  model.rs  shader.rs
stereokit/src/math/: matrix.rs  mod.rs  pose.rs  quat.rs  vec.rs  vec3.rs
sys/: Cargo.toml  build.rs  exposed_functions.txt
sys/examples/: basic.rs
sys/src/: lib.rs
