[package]
name = "stereokit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stereokit-sys = { path = "../sys" }
snafu = "0.6.10"
ustr = "0.8.1"
once_cell = "1.8.0"
derive_more = "0.99.16"

[dev-dependencies]
static_assertions = "1.1.0"
anyhow = "1.0.43"
