[package]
name = "ffi-helpers-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.82"
quote = "1.0.10"
proc-macro2 = "1.0.33"
proc-macro-crate = "1.1.0"
proc-macro-error = "1.0.4"
